--- a/modernCountryMapping.json
+++ b/modernCountryMapping.json
@@ -37,31 +37,117 @@
 	 "modernCountry":"Cyprus"},
     {"countryCode":"CZ",
 	 "modernCountry":"Czech Republic"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"},
-    {"countryCode":"DZ",
-	 "modernCountry":"Algeria"}
+    {"countryCode":"DK",
+	 "modernCountry":"Denmark"},
+    {"countryCode":"TL",
+	 "modernCountry":"East Timor"},
+    {"countryCode":"EG",
+	 "modernCountry":"Egypt"},
+    {"countryCode":"FI",
+	 "modernCountry":"Finland"},
+    {"countryCode":"FR",
+	 "modernCountry":"France"},
+    {"countryCode":"DE",
+	 "modernCountry":"Germany"},
+    {"countryCode":"GH",
+	 "modernCountry":"Ghana"},
+    {"countryCode":"GR",
+	 "modernCountry":"Greece"},
+    {"countryCode":"GP",
+	 "modernCountry":"Guadeloupe Island"},
+    {"countryCode":"GT",
+	 "modernCountry":"Guatemala"},
+    {"countryCode":"HU",
+	 "modernCountry":"Hungary"},
+    {"countryCode":"IS",
+	 "modernCountry":"Iceland"},
+    {"countryCode":"IN",
+	 "modernCountry":"India"},
+	{"countryCode":"ID",
+	 "modernCountry":"Indonesia"},
+    {"countryCode":"IR",
+	 "modernCountry":"Iran"},
+    {"countryCode":"IE",
+	 "modernCountry":"Ireland"},
+    {"countryCode":"IL",
+	 "modernCountry":"Israel"},
+    {"countryCode":"IT",
+	 "modernCountry":"Italy"},
+    {"countryCode":"JP",
+	 "modernCountry":"Japan"},
+    {"countryCode":"KE",
+	 "modernCountry":"Kenya"},
+    {"countryCode":"LV",
+	 "modernCountry":"Latvia"},
+    {"countryCode":"LR",
+	 "modernCountry":"Liberia"},
+    {"countryCode":"LT",
+	 "modernCountry":"Lithuania"},
+    {"countryCode":"LU",
+	 "modernCountry":"Luxembourg"},
+    {"countryCode":"MK",
+	 "modernCountry":"Macedonia"},
+    {"countryCode":"MG",
+	 "modernCountry":"Madagascar"},
+    {"countryCode":"MX",
+	 "modernCountry":"Mexico"},
+    {"countryCode":"MA",
+	 "modernCountry":"Morocco"},
+    {"countryCode":"MM",
+	 "modernCountry":"Myanmar"},
+    {"countryCode":"NZ",
+	 "modernCountry":"New Zealand"},
+    {"countryCode":"NG",
+	 "modernCountry":"Nigeria"},
+    {"countryCode":"NO",
+	 "modernCountry":"Norway"},
+    {"countryCode":"PK",
+	 "modernCountry":"Pakistan"},
+    {"countryCode":"PE",
+	 "modernCountry":"Peru"},
+    {"countryCode":"PL",
+	 "modernCountry":"Poland"},
+    {"countryCode":"PT",
+	 "modernCountry":"Portugal"},
+    {"countryCode":"RO",
+	 "modernCountry":"Romania"},
+    {"countryCode":"RU",
+	 "modernCountry":"Russia"},
+    {"countryCode":"LC",
+	 "modernCountry":"Saint Lucia"},
+    {"countryCode":"SK",
+	 "modernCountry":"Slovakia"},
+    {"countryCode":"SI",
+	 "modernCountry":"Slovenia"},
+    {"countryCode":"ZA",
+	 "modernCountry":"South Africa"},
+    {"countryCode":"KR",
+	 "modernCountry":"South Korea"},
+    {"countryCode":"ES",
+	 "modernCountry":"Spain"},
+    {"countryCode":"SE",
+	 "modernCountry":"Sweden"},
+    {"countryCode":"CH",
+	 "modernCountry":"Switzerland"},
+    {"countryCode":"TW",
+	 "modernCountry":"Taiwan"},
+    {"countryCode":"NL",
+	 "modernCountry":"The Netherlands"},
+    {"countryCode":"TR",
+	 "modernCountry":"Turkey"},
+    {"countryCode":"UA",
+	 "modernCountry":"Ukraine"},
+    {"countryCode":"GB",
+	 "modernCountry":"United Kingdom"},
+    {"countryCode":"US",
+	 "modernCountry":"USA"},
+	{"countryCode":"VE",
+	 "modernCountry":"Venezuela"},
+    {"countryCode":"VN",
+	 "modernCountry":"Vietnam"},
+    {"countryCode":"YE",
+	 "modernCountry":"Yemen"},
+    {"countryCode":"ZW",
+	 "modernCountry":"Zimbabwe"}
 	]
 }
